Added FrameMaker Slides

--- a/index.html
+++ b/index.html
@@ -369,6 +369,40 @@ This is an information useful for the bar audience.
 <p>Material: <a href="http://dita.xml.org/book/export/html/1047" title="History of DITA">History of DITA</a></p>
 <p>17.12.2015: DITA 1.3 (Troubleshooting-Topic, Scoped Keys, MathML und Equation-Domains, Relax NG für normative Schemas )</p>
 </section></section>
+<section><section id="authoring-mit-adobe-framemaker" class="titleslide slide level1"><h1>Authoring mit Adobe Framemaker</h1></section><section id="video-framemaker-basics" class="slide level2">
+<h2>Video Framemaker Basics</h2>
+<p><a href="https://www.youtube.com/watch?v=FwqC8gbH_Xc"><img src="pics/framemaker_basics.png" style="width:60.0%" /></a></p>
+</section><section id="wichtig-zum-editieren-mit-xml" class="slide level2">
+<h2>Wichtig zum Editieren mit XML</h2>
+<ul>
+<li>Workspaces</li>
+<li>Elementgrenzen</li>
+<li>Strukturansicht</li>
+<li>Element-Katalog</li>
+<li>Pods</li>
+</ul>
+</section><section id="erstellen-eines-topics-vom-typ-concept" class="slide level2">
+<h2>Erstellen eines Topics vom Typ &quot;Concept&quot;</h2>
+<p><a href="https://www.youtube.com/watch?v=SWQ9FVUiLWI"><img src="pics/create_concept_framemaker.png" style="width:60.0%" /></a></p>
+</section><section id="editieren-eines-topics-vom-typ-concept" class="slide level2">
+<h2>Editieren eines Topics vom Typ &quot;Concept&quot;</h2>
+<p><a href="https://www.youtube.com/watch?v=9iKQ2WX6CnY"><img src="pics/concept_framemaker.png" style="width:60.0%" /></a></p>
+</section><section id="editieren-des-prologs-und-der-metadateneines-topic" class="slide level2">
+<h2>Editieren des Prologs und der Metadateneines Topic</h2>
+<p><a href="https://www.youtube.com/watch?v=B8VeGvhPoA0"><img src="pics/framemaker_prologue.png" style="width:60.0%" /></a></p>
+</section><section id="wichtige-weitere-punkte" class="slide level2">
+<h2>Wichtige weitere Punkte</h2>
+<ul>
+<li>Attributansicht durch Klicken rechts bei Element</li>
+<li>Attribut-Pad durch Doppelklicken</li>
+<li>Requires attributes</li>
+<li>Metadaten zur Audience</li>
+<li>Keywords</li>
+</ul>
+</section><section id="erstellen-eines-topics-vom-typ-task" class="slide level2">
+<h2>Erstellen eines Topics vom Typ &quot;Task&quot;</h2>
+<p><a href="https://www.youtube.com/watch?v=gZih-jZT8-Y"><img src="pics/task_framemaker.png" style="width:60.0%" /></a></p>
+</section></section>
 <section><section id="anwendungen" class="titleslide slide level1"><h1>Anwendungen</h1></section><section id="component-based-content-management-systems" class="slide level2">
 <h2>Component Based Content Management Systems</h2>
 <blockquote>
